[package]
name = "hass-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }


